Bug 219444. Certain style changes to tables don't work because table-outer frames inherit style from table-inner frames but are above them in the frame tree. Hack ReResolveStyleContext to make sure table-outer frames get the right style changes. r+sr=bzbarsky